<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_overview"
        android:icon="@drawable/ic_grid"
        android:title="@string/page_overview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_outline"
        android:title="@string/bookmark_page"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/view_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_fullscreen"
        android:title="@string/enter_fullscreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recognize"
        android:title="@string/recognize_handwriting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_jump"
        android:title="@string/go_to_page"
        app:showAsAction="never" />
</menu>
